--- a/README.Rmd
+++ b/README.Rmd
@@ -40,9 +40,83 @@ mid-interval sample?
 
 You can install the development version of mipdtrial from [GitHub](https://github.com/) with:
 
-``` r
+```r
 # install.packages("devtools")
 devtools::install_github("InsightRX/mipdtrial")
 ```
 For examples of how to use the package to answer questions about MIPD and
 target attainment, check out the vignettes listed under "Articles!"
+
+## Usage
+
+To use the `mipdtrial` package, it is crucial to understand the concept of "design" 
+that is introduced in the package. The main goal of the designs is to allow 
+configuration of flexible trials in which the sampling and regimen updates can 
+depend on prior regimen changes, such as when the dosing interval is changed, 
+but we still want to sample at dose 7 regardless of the dosing interval. Or, 
+when infusion lengths are changed, but we still want to sample a peak sample. 
+When times are pre-specified and fixed this flexibility is not possible. 
+
+The following designs need to be configured for every trial simulation:
+
+- `sampling_design` : determines at what timepoints samples are taken.
+- `target_design`: determines at what timepoint the target should be measured, 
+and what the target is.
+- `regimen_update_design` : determines at what timepoint the dose can be updated 
+in response to new information sampled using the `sampling_design`, and how
+to optimize the dosing regimen.
+
+All of these three designs can be "anchored" to a specific dose or day number. 
+They can also be offset from the dosing time to e.g. sample at "peak" or "trough" 
+times. Here is an example of how to set up a design for a simulated MIPD trial:
+
+```r
+# sample at peak (at 1-hour infusion end), and 1 hour before true trough
+# do this at dose #1 and #3
+tdm_design <- create_sampling_design(
+  time = c(1, -1, 1, -1), 
+  offset_from = c("peak", "trough", "peak", "trough"),
+  anchor = c(1, 1, 3, 3),
+  anchor_by = "dose"
+)
+## If you are sure the sampling times and dosing intervals are not going 
+## to change during the trial, you could also specify this design simply
+## using fixed times as: (assuming 12-hour intervals)
+tdm_design <- create_sampling_design(
+	time = c(1, 11, 25, 35)
+)
+
+## target auc24 of 400-600 at day 6
+target_design <- create_target_design(
+  targettype = "auc24", 
+  targetmin = 400,
+  targetmax = 600,
+  anchor = 6,
+  anchor_by = "day"
+)
+
+## allow dose updates at dose #3 and #5
+dose_update_design <- create_regimen_update_design(
+  anchor = c(3, 5),
+  anchor_by = "dose",
+  update_type = "dose",
+  dose_optimization_method = map_adjust_dose
+)
+```
+
+The vignettes show various additional examples of how to set up the trial 
+simulations. If you find an example of an MIPD trial design that cannot be 
+captured yet using these functions, please let us know.
+
+## Roadmap
+
+The `mipdtrial` package is currently under development, and there will likely be 
+changes to core functionality in the upcoming months. The following features are
+on our short-term roadmap:
+
+- Implement functionality to gather all relevant information during and at the 
+end of the simulated trial, and include it in the output from `sample_and_adjust_by_dose`.
+- Improve ease of use: implement a single function to run the trial
+- Add more optimization functions, e.g. combined dose- and interval- optimization
+- Add functionality to generate more realistic trial scenarios, e.g. allow some
+random scattering of TDM samples over time.
