--- a/vignettes/vancomycin_interval_adaptation.Rmd
+++ b/vignettes/vancomycin_interval_adaptation.Rmd
@@ -33,7 +33,7 @@ in dose 1 and 3.
 tdm_design <- create_sampling_design(
   offset = c(1, -1, 1, -1), # sample 1-hour before true trough, and at peak+1hr
   when = c("peak", "trough", "peak", "trough"),
-  sample_at = c(1, 1, 3, 3),
+  at = c(1, 1, 3, 3),
   anchor = "dose"
 )
 ```
@@ -48,17 +48,17 @@ target_design <- create_target_design(
   targettype = "auc24", 
   targetmin = 400,
   targetmax = 600,
-  target_at = 6,
+  at = 6,
   anchor = "day"
 )
 dose_update_design <- create_regimen_update_design(
-  update_at = c(3, 5),
+  at = c(3, 5),
   anchor = "dose",
   update_type = "dose",
   dose_optimization_method = map_adjust_dose
 )
 interval_update_design <- create_regimen_update_design(
-  update_at = c(3, 5),
+  at = c(3, 5),
   anchor = "dose",
   update_type = "interval",
   dose_optimization_method = map_adjust_interval
@@ -229,8 +229,8 @@ allow the dose to be changed after doses 3 and 5 (irrespective of interval).
 
 ```{r}
 interval_update_design <- create_regimen_update_design(
-  anchor = c(3, 5),
-  anchor_by = "dose",
+  at = c(3, 5),
+  anchor = "dose",
   update_type = "interval"
 )
 ```
