--- a/vignettes/pegasp_mipd.Rmd
+++ b/vignettes/pegasp_mipd.Rmd
@@ -51,15 +51,22 @@ prior to the next dose. We will adjust doses 2 and 3 to achieve a steady state
 asparaginase activity level of of 300 IU/L (0.3 IU/mL) (goal: 0.1 - 0.5 IU/mL)
 
 ```{r}
-tdm_times <- c( 13.9*24,  27.9*24,  41.9*24) 
-adjust_at_dose <- c(2, 3) 
-
-target <- create_target_object(
-  targettype = "conc", 
-  targetvalue = 300
+tdm_design <- create_sampling_design(
+  time = c(13.9*24,  27.9*24,  41.9*24)
 )
 
-conc_times <- 1344
+update_design <- create_regimen_update_design(
+  at = c(2, 3),
+  anchor = "dose",
+  dose_optimization_method = map_adjust_dose
+)
+
+target_design <- create_target_design(
+  targettype = "cmin", 
+  targetvalue = 300,
+  at = 4,
+  anchor = "dose"
+)
 ```
 
 ## 2. Create a set of digital patient covariates
@@ -177,7 +184,7 @@ for (i in ids) {
   reg <- new_regimen(
     amt = dose, 
     interval = 14*24,
-    n = 4,
+    n = 5,
     t_inf = 1,
     type = "infusion"
   )
@@ -190,8 +197,9 @@ for (i in ids) {
   )
   
   treatment_summary <- sample_and_adjust_by_dose(
-    adjust_at_dose = adjust_at_dose,
-    tdm_times = tdm_times,
+    sampling_design = tdm_design,
+    regimen_update_design = update_design,
+    target_design = target_design,
     regimen = reg,
     covariates = covs,
     pars_true_i = pars_true_i,
@@ -200,10 +208,7 @@ for (i in ids) {
     est_model = model,
     parameters = parameters,
     omega = omega,
-    ruv = ruv,
-    target_time = conc_times,
-    target = target,
-    dose_optimization_method = dose_adjust_map
+    ruv = ruv
   )
     
   # get final asparaginase activity level
@@ -213,15 +218,15 @@ for (i in ids) {
     regimen = treatment_summary$final_regimen,
     covariates = covs,
     ruv = ruv,
-    t_obs = c(14, 28, 42) * 24,
+    t_obs = tdm_design$offset,
     only_obs = TRUE
   )
   conc  <- sim$y
   results$conc[results$id == i] <- conc
   
   #Add amounts
-  amt <- treatment_summary$final_regimen$dose_amts
-  results$amt[results$id == i] <- amt[-1]
+  amt <- treatment_summary$final_regimen$dose_amts[-c(1, 5)]
+  results$amt[results$id == i] <- amt
 }
 ```
 
@@ -237,7 +242,7 @@ How well did our patients get to target?
 
 ```{r}
 results %>%
-  filter(day %in% c(14,28,42)) %>%
+  filter(day %in% c(14, 28, 42)) %>%
   filter(!is.na(conc)) %>%
   mutate(
     below_flag = conc < 100,
